# gen_ai_projects

./: .gitignore
langchain/: pyproject.toml
langchain/automatic_ticket_classification/: app.py
langchain/automatic_ticket_classification/pages/: Load_Data_Store.py
langchain/csv_data_analysis/: app.py  utils.py
langchain/multiple_docs_chat/: app.py  htmlTemplates.py
langchain/support_chat/: app.py  constants.py  utils.py
langchain/youtube_script_writer/: app.py
llamaindex/: pyproject.toml
llamaindex/starter/: starter.py
